==> openharmony/device_board_kaihong/khdvk_450a/liteos_m/drivers/spi/spi_gd32f4xx.c <==
#include "hdf_device_desc.h"
#include "hdf_log.h"
#include "spi_core.h"
#include "gd32f4xx_spi.h"
#include "spi_if.h"
#include "hcs_macro.h"
#include "hdf_config_macro.h"
#include "device_resource_if.h"
#define BITWORD_EIGHT 8
#define BITWORD_SIXTEEN 16
#define PER_MS_IN_SEC 1000
#define SPI_CLK 100000000
#define WAIT_TIME_MAX 10000
#define SPICFG_MODE 0x0000
#define SPI_SOFT 0
#define GPIO_REG_BASE 0x40020000
#define GPIO_REG_STEP 0x00000400
#define GPIO_BIT_PER_GROUP 16

static void EnableSpiClock(uint32_t spiNum)
{
    switch (spiNum) {
        case SPI_PORT1:
            spi_enable(SPI0);
        case SPI_PORT2:
            spi_enable(SPI1);
        case SPI_PORT3:
            spi_enable(SPI2);
        case SPI_PORT4:
            spi_enable(SPI3);
        case SPI_PORT5:
            spi_enable(SPI4);
        case SPI_PORT6:
            spi_enable(SPI5);
        default:
            break;
    }
}

static int32_t InitSpiDevice(const SpiDevice *spiDevice)
{
    SpiResource *resource = NULL;
    spi_parameter_struct spiInitStruct = {0};
    uint32_t spix;

    if (spiDevice == NULL) {
        HDF_LOGE("%s: invalid parameter", __func__);
        return HDF_ERR_INVALID_PARAM;
    }

    resource = &spiDevice->resource;
    spix = g_spiGroupMaps[resource->num];

    SpiStructInit(&spiInitStruct, resource);
    spi_init(spix, &spiInitStruct);

    if (resource->enableQuad == TRUE) {
        /* quad wire SPI_IO2 and SPI_IO3 pin output enable */
        spi_quad_io23_output_enable(spix);
    }

    spi_enable(spix);

    return HDF_SUCCESS;
}

static int32_t GetSpiDeviceResource(SpiDevice *spiDevice, const char *deviceMatchAttr)
{
    int32_t result = HDF_FAILURE;
    SpiResource *resource = NULL;
    if (spiDevice == NULL || deviceMatchAttr == NULL) {
        HDF_LOGE("device or deviceMatchAttr is NULL");
        return HDF_ERR_INVALID_PARAM;
    }
    resource = &spiDevice->resource;
#if HCS_NODE_HAS_PROP(PLATFORM_CONFIG, spi_config)
    HCS_FOREACH_CHILD_VARGS(PLATFORM_SPI_CONFIG, SPI_FIND_CONFIG, deviceMatchAttr, resource, spiDevice);
#endif
    if (result != HDF_SUCCESS) {
        HDF_LOGE("resourceNode %s is NULL", deviceMatchAttr);
    }
    return result;
}

static int32_t GetSpiDeviceResource(SpiDevice *spiDevice, const struct DeviceResourceNode *resourceNode)
{
    struct DeviceResourceIface *dri = NULL;
    SpiResource *resource = NULL;

    if (spiDevice == NULL || resourceNode == NULL) {
        HDF_LOGE("%s: PARAM is NULL", __func__);
        return HDF_ERR_INVALID_PARAM;
    }

    resource = &spiDevice->resource;
    if (resource == NULL) {
        HDF_LOGE("%s: resource is NULL", __func__);
        return HDF_ERR_INVALID_OBJECT;
    }

    dri = DeviceResourceGetIfaceInstance(HDF_CONFIG_SOURCE);
    if (dri == NULL || dri->GetUint16 == NULL || dri->GetUint8 == NULL || dri->GetUint32 == NULL) {
        HDF_LOGE("DeviceResourceIface is invalid");
        return HDF_ERR_INVALID_PARAM;
    }

    if (dri->GetUint8(resourceNode, "num", &resource->num, 0) != HDF_SUCCESS) {
        HDF_LOGE("get config num failed");
        return HDF_FAILURE;
    }
    if (dri->GetUint8(resourceNode, "csPin", &resource->csPin, 0) != HDF_SUCCESS) {
        HDF_LOGE("get config csPin failed");
        return HDF_FAILURE;
    }
    if (dri->GetUint32(resourceNode, "speed", &resource->speed, 0) != HDF_SUCCESS) {
        HDF_LOGE("get config speed failed");
        return HDF_FAILURE;
    }
    if (dri->GetUint32(resourceNode, "dataSize", &resource->dataSize, 0) != HDF_SUCCESS) {
        HDF_LOGE("get config dataSize failed");
        return HDF_FAILURE;
    }
    if (dri->GetUint32(resourceNode, "clkPin", &resource->clkPin, 0) != HDF_SUCCESS) {
        HDF_LOGE("get config spiClkPin failed");
        return HDF_FAILURE;
    }
    if (dri->GetUint32(resourceNode, "mosiPin", &resource->mosiPin, 0) != HDF_SUCCESS) {
        HDF_LOGE("get config spiMosiPin failed");
        return HDF_FAILURE;
    }
    if (dri->GetUint32(resourceNode, "misoPin", &resource->misoPin, 0) != HDF_SUCCESS) {
        HDF_LOGE("get config spiMisoPin failed");
        return HDF_FAILURE;
    }
    if (dri->GetUint32(resourceNode, "csSoft", &resource->csSoft, 0) != HDF_SUCCESS) {
        HDF_LOGE("get config spiCsSoft failed");
        return HDF_FAILURE;
    }
    if (dri->GetUint32(resourceNode, "transMode", &resource->transMode, 0) != HDF_SUCCESS) {
        HDF_LOGE("get config transMode failed");
        return HDF_FAILURE;
    }
    if (dri->GetUint32(resourceNode, "mode", &resource->mode, 0) != HDF_SUCCESS) {
        HDF_LOGE("get config mode failed");
        return HDF_FAILURE;
    }
    if (dri->GetUint32(resourceNode, "afPin", &resource->afPin, 0) != HDF_SUCCESS) {
        HDF_LOGE("get config afPin failed");
        return HDF_FAILURE;
    }
    if (dri->GetUint32(resourceNode, "enableQuad", &resource->enableQuad, 0) != HDF_SUCCESS) {
        HDF_LOGE("get config enableQuad failed");
        return HDF_FAILURE;
    }

    spiDevice->spiId = resource->num;

    return HDF_SUCCESS;
}

static int32_t AttachSpiDevice(struct SpiCntlr *spiCntlr, const struct HdfDeviceObject *device)
{
    int32_t ret;
    SpiDevice *spiDevice = NULL;

#ifdef LOSCFG_DRIVERS_HDF_CONFIG_MACRO
    if (spiCntlr == NULL || device == NULL) {
#else
    if (spiCntlr == NULL || device == NULL || device->property == NULL) {
#endif
        HDF_LOGE("%s: param is NULL", __func__);
        return HDF_ERR_INVALID_PARAM;
    }

    spiDevice = (struct SpiDevice *)OsalMemAlloc(sizeof(*spiDevice));
    if (spiDevice == NULL) {
        HDF_LOGE("%s: OsalMemAlloc spiDevice error", __func__);
        return HDF_ERR_MALLOC_FAIL;
    }

#ifdef LOSCFG_DRIVERS_HDF_CONFIG_MACRO
    ret = GetSpiDeviceResource(spiDevice, device->deviceMatchAttr);
#else
    ret = GetSpiDeviceResource(spiDevice, device->property);
#endif
    if (ret != HDF_SUCCESS) {
        (void)OsalMemFree(spiDevice);
        return HDF_FAILURE;
    }

    spiCntlr->priv = spiDevice;
    spiCntlr->busNum = spiDevice->spiId;

    InitSpiRcu(&spiDevice->resource);
    InitSpiGpio(&spiDevice->resource);
    InitSpiDevice(spiDevice);

    return HDF_SUCCESS;
}

static int32_t SpiDevOpen(struct SpiCntlr *spiCntlr)
{
    HDF_LOGI("Enter %s", __func__);
    if (spiCntlr == NULL) {
        HDF_LOGE("spiCntlr is NULL");
        return HDF_ERR_INVALID_PARAM;
    }
    SpiDevice *spiDevice = NULL;
    spiDevice = (SpiDevice *)spiCntlr->priv;
    uint32_t spix = g_spiGroupMaps[spiDevice->resource.num];
    spi_enable(spix);

    return HDF_SUCCESS;
}

static int32_t SpiDevClose(struct SpiCntlr *spiCntlr)
{
    HDF_LOGI("Enter %s", __func__);
    if (spiCntlr == NULL) {
        HDF_LOGE("spiCntlr is NULL");
        return HDF_ERR_INVALID_PARAM;
    }
    SpiDevice *spiDevice = NULL;
    spiDevice = (SpiDevice *)spiCntlr->priv;
    uint32_t spix = g_spiGroupMaps[spiDevice->resource.num];
    spi_disable(spix);

    return HDF_SUCCESS;
}

static int32_t SpiDevGetCfg(struct SpiCntlr *spiCntlr, struct SpiCfg *spiCfg)
{
    SpiDevice *spiDevice = NULL;
    if (spiCntlr == NULL || spiCfg == NULL || spiCntlr->priv == NULL) {
        HDF_LOGE("%s: spiCntlr is NULL", __func__);
        return HDF_ERR_INVALID_PARAM;
    }
    spiDevice = (SpiDevice *)spiCntlr->priv;
    if (spiDevice == NULL) {
        return HDF_DEV_ERR_NO_DEVICE;
    }

    spiCfg->maxSpeedHz = spiDevice->resource.speed;
    spiCfg->mode = spiDevice->resource.mode;
    spiCfg->transferMode = spiDevice->resource.transMode;
    spiCfg->bitsPerWord = spiDevice->resource.dataSize;

    return HDF_SUCCESS;
}

static int32_t SpiDevSetCfg(struct SpiCntlr *spiCntlr, struct SpiCfg *spiCfg)
{
    SpiDevice *spiDevice = NULL;
    if (spiCntlr == NULL || spiCfg == NULL || spiCntlr->priv == NULL) {
        HDF_LOGE("%s: spiCntlr is NULL", __func__);
        return HDF_ERR_INVALID_PARAM;
    }
    spiDevice = (SpiDevice *)spiCntlr->priv;
    if (spiDevice == NULL) {
        HDF_LOGE("%s: spiDevice is NULL", __func__);
        return HDF_DEV_ERR_NO_DEVICE;
    }

    if ((spiDevice->resource.speed == spiCfg->maxSpeedHz) && (spiDevice->resource.dataSize == spiCfg->bitsPerWord) &&
        (spiDevice->resource.transMode == spiCfg->transferMode) && (spiDevice->resource.mode == spiCfg->mode)) {
        return HDF_SUCCESS;
    }

    spiDevice->resource.speed = spiCfg->maxSpeedHz;
    spiDevice->resource.dataSize = spiCfg->bitsPerWord;
    spiDevice->resource.transMode = spiCfg->transferMode;
    spiDevice->resource.mode = spiCfg->mode;

    return InitSpiDevice(spiDevice);
}

static int32_t SpiDevTransfer(struct SpiCntlr *spiCntlr, struct SpiMsg *spiMsg, uint32_t count)
{
    SpiDevice *spiDevice = NULL;
    uint32_t ticks = 0;
    int32_t ret = 0;
    uint8_t singleCsChange = 0;
    struct SpiMsg *msg = NULL;
    msg = (struct SpiMsg *)OsalMemAlloc(sizeof(*msg));
    if (spiCntlr == NULL || spiCntlr->priv == NULL) {
        HDF_LOGE("%s: spiCntlr is NULL", __func__);
        return HDF_ERR_INVALID_PARAM;
    }
    spiDevice = (SpiDevice *)spiCntlr->priv;
    InitSpiDevice(spiDevice);

    for (size_t i = 0; i < count; i++) {
        msg = &spiMsg[i];
        gpio_bit_reset(ToGpioPeriph((spiDevice->resource).csPin), ToGpioPin((spiDevice->resource).csPin));

        ret = SpiSendRecv(spiDevice, msg->wbuf, msg->rbuf, msg->len);
        if (ret != HDF_SUCCESS) {
            HDF_LOGE("%s: SpiSendRecv failed: ret is %x", __func__, ret);
        }

        if (msg->keepCs == 0 || singleCsChange) {
            gpio_bit_reset(ToGpioPeriph((spiDevice->resource).csPin), ToGpioPin((spiDevice->resource).csPin));
        }
        if (msg->delayUs > 0) {
            ticks = (msg->delayUs / PER_MS_IN_SEC);
            osDelay(ticks);
        }
    }

    HDF_LOGD("%s success\n", __func__);
    return HDF_SUCCESS;
}

struct SpiCntlrMethod g_method = {
    .Transfer = SpiDevTransfer,
    .SetCfg = SpiDevSetCfg,
    .GetCfg = SpiDevGetCfg,
    .Open = SpiDevOpen,
    .Close = SpiDevClose,
};

static int32_t SpiDriverBind(struct HdfDeviceObject *device)
{
    struct SpiCntrl *spiCntlr = NULL;

    HDF_LOGI("%s: Enter ", __func__);

    if (device == NULL) {
        HDF_LOGE("device object is null!");
        return HDF_ERR_INVALID_PARAM;
    }

    spiCntlr = SpiCntlrCreate(device);
    if (spiCntlr == NULL) {
        HDF_LOGE("SpiCntrlCreate object failed!");
        return HDF_FAILURE;
    }
    HDF_LOGI("%s spi bind success\n", __func__);

    return HDF_SUCCESS;
}

static int32_t SpiDriverInit(struct HdfDeviceObject *device)
{
    int32_t ret;
    struct SpiCntlr *spiCntlr = NULL;

    if (device == NULL) {
        HDF_LOGE("device object is null!");
        return HDF_ERR_INVALID_PARAM;
    }
    HDF_LOGI("%s: Enter", __func__);

    spiCntlr = SpiCntlrFromDevice(device);
    if (spiCntlr == NULL) {
        HDF_LOGE("%s: spiCntlr is NULL", __func__);
        return HDF_DEV_ERR_NO_DEVICE;
    }

    ret = AttachSpiDevice(spiCntlr, device);
    if (ret != HDF_SUCCESS) {
        HDF_LOGE("%s: attach error", __func__);
        return HDF_DEV_ERR_ATTACHDEV_FAIL;
    }

    spiCntlr->method = &g_method;
    HDF_LOGI("%s spi%d init success\n", __func__, spiCntlr->busNum);

    return HDF_SUCCESS;
}

static void SpiDriverRelease(struct HdfDeviceObject *device)
{
    struct SpiCntlr *spiCntlr = NULL;
    SpiDevice *spiDevice = NULL;
    if (device == NULL) {
        HDF_LOGE("%s: device is NULL", __func__);
        return;
    }

    spiCntlr = SpiCntlrFromDevice(device);
    if (spiCntlr == NULL || spiCntlr->priv == NULL) {
        HDF_LOGE("%s: spiCntlr is NULL", __func__);
        return;
    }

    spiDevice = (SpiDevice *)spiCntlr->priv;
    OsalMemFree(spiDevice);

    HDF_LOGD("%s success", __func__);
}

struct HdfDriverEntry g_hdfSpiDevice = {
    .moduleVersion = 1,
    .moduleName = "GD_SPI_MODULE_HDF",
    .Bind = SpiDriverBind,
    .Init = SpiDriverInit,
    .Release = SpiDriverRelease,
};
HDF_INIT(g_hdfSpiDevice);
