==> x3pi/tz-llm-trustzone/tz-llm/drivers_hdf_core_full/drivers/hdf_core/adapter/platform/spi/spi_stm32f4xx.c <==
#include <stdlib.h>
#include <string.h>
#include "hal_gpio.h"
#include "hal_spi.h"
#include "osal_mutex.h"
#include "osal_sem.h"
#include "spi_core.h"
#include "hcs_macro.h"
#include "hdf_config_macro.h"
#include "device_resource_if.h"
#include "hdf_log.h"
#include "hdf_base_hal.h"
#define BITWORD_EIGHT 8
#define BITWORD_SIXTEEN 16
#define GPIO_STR_MAX 32
#define PER_MS_IN_SEC 1000
#define HCS_UINT8_PARSE_NUM 16

static void EnableSpiClock(uint32_t spiNum)
{
    switch (spiNum) {
        case SPI_PORT1:
            LL_APB2_GRP1_EnableClock(LL_APB2_GRP1_PERIPH_SPI1);
            break;
        case SPI_PORT2:
            LL_APB1_GRP1_EnableClock(LL_APB1_GRP1_PERIPH_SPI2);
            break;
        case SPI_PORT3:
            LL_APB1_GRP1_EnableClock(LL_APB1_GRP1_PERIPH_SPI3);
            break;
        default:
            break;
    }
}

static int32_t InitSpiDevice(const SpiDevice *spiDevice)
{
    uint32_t spiPort;
    SpiResource *resource = NULL;
    if (spiDevice == NULL) {
        HDF_LOGE("%s: invalid parameter\r\n", __func__);
        return HDF_ERR_INVALID_PARAM;
    }

    LL_SPI_InitTypeDef spiInitStruct = {0};
    resource = &spiDevice->resource;
    spiPort = spiDevice->spiId;
    EnableSpiClock(spiPort + 1);
    InitSpiInitStruct(&spiInitStruct, resource);
    SPI_TypeDef* spix = g_spiGroupMaps[resource->spix];

    g_spiContext[spiPort].spix = spix;
    LL_SPI_Disable(spix);
    uint8_t ret = LL_SPI_Init(spix, &spiInitStruct);
    if (ret != 0) {
        HDF_LOGE("HAL INIT SPI FAILED\r\n");
        return HDF_FAILURE;
    }
    if (resource->standard == SPI_PROTO_MOTOROLA) {
        LL_SPI_SetStandard(spix, LL_SPI_PROTOCOL_MOTOROLA);
    } else {
        LL_SPI_SetStandard(spix, LL_SPI_PROTOCOL_TI);
    }

    return HDF_SUCCESS;
}

static int32_t GetSpiDeviceResource(SpiDevice *spiDevice, const char *deviceMatchAttr)
{
    int32_t result = HDF_FAILURE;
    SpiResource *resource = NULL;
    if (spiDevice == NULL || deviceMatchAttr == NULL) {
        HDF_LOGE("device or deviceMatchAttr is NULL\r\n");
        return HDF_ERR_INVALID_PARAM;
    }
    resource = &spiDevice->resource;
#if HCS_NODE_HAS_PROP(PLATFORM_CONFIG, spi_config)
    HCS_FOREACH_CHILD_VARGS(PLATFORM_SPI_CONFIG, SPI_FIND_CONFIG, deviceMatchAttr, resource, spiDevice);
#endif
    if (result != HDF_SUCCESS) {
        HDF_LOGE("resourceNode %s is NULL\r\n", deviceMatchAttr);
    }
    return result;
}

static int32_t GetSpiDeviceResource(SpiDevice *spiDevice, const struct DeviceResourceNode *resourceNode)
{
    struct DeviceResourceIface *dri = NULL;
    if (spiDevice == NULL || resourceNode == NULL) {
        HDF_LOGE("%s: PARAM is NULL\r\n", __func__);
        return HDF_ERR_INVALID_PARAM;
    }
    SpiResource *resource = NULL;
    resource = &spiDevice->resource;
    if (resource == NULL) {
        HDF_LOGE("%s: resource is NULL\r\n", __func__);
        return HDF_ERR_INVALID_OBJECT;
    }
    dri = DeviceResourceGetIfaceInstance(HDF_CONFIG_SOURCE); // open HDF
    if (dri == NULL || dri->GetUint16 == NULL || dri->GetUint8 == NULL || dri->GetUint32 == NULL) {
        HDF_LOGE("DeviceResourceIface is invalid\r\n");
        return HDF_ERR_INVALID_PARAM;
    }
    uint8_t temp[HCS_UINT8_PARSE_NUM] = {0};
    for (int i = 0; i < HCS_UINT8_PARSE_NUM; i++) {
        if (dri->GetUint8(resourceNode, g_parseHcsMap[i], &temp[i], 0) != HDF_SUCCESS) {
            HDF_LOGE("get config %s failed\r\n", g_parseHcsMap[i]);
            return HDF_FAILURE;
        }
    }
    int ret = memcpy_s(resource, HCS_UINT8_PARSE_NUM, temp, HCS_UINT8_PARSE_NUM);
    if (ret != 0) {
        HDF_LOGE("memcpy failed\r\n");
        return HDF_FAILURE;
    }
    if (dri->GetUint16(resourceNode, "crcPoly", &resource->crcPoly, 0) != HDF_SUCCESS) {
        HDF_LOGE("get config %s failed\r\n", "crcPoly");
        return HDF_FAILURE;
    }
    spiDevice->spiId = resource->busNum;

    return HDF_SUCCESS;
}

static int32_t AttachSpiDevice(struct SpiCntlr *spiCntlr, const struct HdfDeviceObject *device)
{
    int32_t ret;
    SpiDevice *spiDevice = NULL;

#ifdef LOSCFG_DRIVERS_HDF_CONFIG_MACRO
    if (spiCntlr == NULL || device == NULL) {
#else
    if (spiCntlr == NULL || device == NULL || device->property == NULL) {
#endif
        HDF_LOGE("%s: property is NULL\r\n", __func__);
        return HDF_ERR_INVALID_PARAM;
    }

    spiDevice = (SpiDevice *)OsalMemAlloc(sizeof(SpiDevice));
    if (spiDevice == NULL) {
        HDF_LOGE("%s: OsalMemAlloc spiDevice error\r\n", __func__);
        return HDF_ERR_MALLOC_FAIL;
    }

#ifdef LOSCFG_DRIVERS_HDF_CONFIG_MACRO
    ret = GetSpiDeviceResource(spiDevice, device->deviceMatchAttr);
#else
    ret = GetSpiDeviceResource(spiDevice, device->property);
#endif
    if (ret != HDF_SUCCESS) {
        (void)OsalMemFree(spiDevice);
        return HDF_FAILURE;
    }

    spiCntlr->priv = spiDevice;
    spiCntlr->busNum = spiDevice->spiId;
    InitSpiDevice(spiDevice);

    return HDF_SUCCESS;
}
/* SPI Method */
static int32_t SpiDevGetCfg(struct SpiCntlr *spiCntlr, struct SpiCfg *spiCfg);
static int32_t SpiDevSetCfg(struct SpiCntlr *spiCntlr, struct SpiCfg *spiCfg);
static int32_t SpiDevTransfer(struct SpiCntlr *spiCntlr, struct SpiMsg *spiMsg, uint32_t count);
static int32_t SpiDevOpen(struct SpiCntlr *spiCntlr);
static int32_t SpiDevClose(struct SpiCntlr *spiCntlr);

struct SpiCntlrMethod g_twSpiCntlrMethod = {
    .GetCfg = SpiDevGetCfg,
    .SetCfg = SpiDevSetCfg,
    .Transfer = SpiDevTransfer,
    .Open = SpiDevOpen,
    .Close = SpiDevClose,
};

/* HdfDriverEntry method definitions */
static int32_t SpiDriverBind(struct HdfDeviceObject *device);
static int32_t SpiDriverInit(struct HdfDeviceObject *device);
static void SpiDriverRelease(struct HdfDeviceObject *device);

/* HdfDriverEntry definitions */
struct HdfDriverEntry g_SpiDriverEntry = {
    .moduleVersion = 1,
    .moduleName = "ST_SPI_MODULE_HDF",
    .Bind = SpiDriverBind,
    .Init = SpiDriverInit,
    .Release = SpiDriverRelease,
};

HDF_INIT(g_SpiDriverEntry);

static int32_t SpiDriverBind(struct HdfDeviceObject *device)
{
    struct SpiCntlr *spiCntlr = NULL;
    if (device == NULL) {
        HDF_LOGE("Sample device object is null!\r\n");
        return HDF_ERR_INVALID_PARAM;
    }
    HDF_LOGI("Enter %s:\r\n", __func__);
    spiCntlr = SpiCntlrCreate(device);
    if (spiCntlr == NULL) {
        HDF_LOGE("SpiCntlrCreate object is null!\r\n");
        return HDF_FAILURE;
    }

    return HDF_SUCCESS;
}

static int32_t SpiDriverInit(struct HdfDeviceObject *device)
{
    int32_t ret;
    struct SpiCntlr *spiCntlr = NULL;

    if (device == NULL) {
        HDF_LOGE("%s: device is NULL\r\n", __func__);
        return HDF_ERR_INVALID_PARAM;
    }

    HDF_LOGI("Enter %s:", __func__);
    spiCntlr = SpiCntlrFromDevice(device);
    if (spiCntlr == NULL) {
        HDF_LOGE("%s: spiCntlr is NULL", __func__);
        return HDF_DEV_ERR_NO_DEVICE;
    }

    ret = AttachSpiDevice(spiCntlr, device); // SpiCntlr add TWSpiDevice to priv
    if (ret != HDF_SUCCESS) {
        HDF_LOGE("%s: attach error\r\n", __func__);
        return HDF_DEV_ERR_ATTACHDEV_FAIL;
    }

    spiCntlr->method = &g_twSpiCntlrMethod; // register callback

    return ret;
}

static void SpiDriverRelease(struct HdfDeviceObject *device)
{
    struct SpiCntlr *spiCntlr = NULL;
    SpiDevice *spiDevice = NULL;

    HDF_LOGI("Enter %s\r\n", __func__);

    if (device == NULL) {
        HDF_LOGE("%s: device is NULL\r\n", __func__);
        return;
    }

    spiCntlr = SpiCntlrFromDevice(device);
    if (spiCntlr == NULL || spiCntlr->priv == NULL) {
        HDF_LOGE("%s: spiCntlr is NULL\r\n", __func__);
        return;
    }

    spiDevice = (SpiDevice *)spiCntlr->priv;
    OsalMemFree(spiDevice);

    return;
}

static int32_t SpiDevOpen(struct SpiCntlr *spiCntlr)
{
    HDF_LOGI("Enter %s\r\n", __func__);
    SpiDevice *spiDevice = NULL;

    spiDevice = (SpiDevice*)spiCntlr->priv;
    SPI_TypeDef* spix = g_spiGroupMaps[spiDevice->resource.spix];
    LL_SPI_Enable(spix);

    return HDF_SUCCESS;
}

static int32_t SpiDevClose(struct SpiCntlr *spiCntlr)
{
    SpiDevice *spiDevice = NULL;

    spiDevice = (SpiDevice*)spiCntlr->priv;
    SPI_TypeDef* spix = g_spiGroupMaps[spiDevice->resource.spix];
    LL_SPI_Disable(spix);

    return HDF_SUCCESS;
}

static int32_t SpiDevGetCfg(struct SpiCntlr *spiCntlr, struct SpiCfg *spiCfg)
{
    SpiDevice *spiDevice = NULL;

    if (spiCntlr == NULL || spiCfg == NULL || spiCntlr->priv == NULL) {
        HDF_LOGE("%s: spiCntlr is NULL\r\n", __func__);
        return HDF_ERR_INVALID_PARAM;
    }
    spiDevice = (SpiDevice *)spiCntlr->priv;
    spiCfg->maxSpeedHz = spiDevice->resource.baudRate;
    spiCfg->mode = spiDevice->resource.clkMode;
    spiCfg->transferMode = spiDevice->resource.transMode;

    if (spiDevice->resource.dataWidth == SPI_DATA_WIDTH_16) {
        spiCfg->bitsPerWord = BITWORD_SIXTEEN;
    } else {
        spiCfg->bitsPerWord = BITWORD_EIGHT;
    }

    return HDF_SUCCESS;
}
static int32_t SpiDevSetCfg(struct SpiCntlr *spiCntlr, struct SpiCfg *spiCfg)
{
    SpiDevice *spiDevice = NULL;

    if (spiCntlr == NULL || spiCfg == NULL || spiCntlr->priv == NULL) {
        HDF_LOGE("%s: spiCntlr is NULL\r\n", __func__);
        return HDF_ERR_INVALID_PARAM;
    }
    spiDevice = (SpiDevice *)spiCntlr->priv;
    spiDevice->resource.baudRate = spiCfg->maxSpeedHz;
    spiDevice->resource.clkMode = spiCfg->mode;
    spiDevice->resource.transMode = spiCfg->transferMode;
    if (spiCfg->bitsPerWord == BITWORD_EIGHT) {
        spiDevice->resource.dataWidth  = SPI_DATA_WIDTH_8;
    } else {
        spiDevice->resource.dataWidth  = SPI_DATA_WIDTH_16;
    }

    return InitSpiDevice(spiDevice);
}

static int32_t SpiDevTransfer(struct SpiCntlr *spiCntlr, struct SpiMsg *spiMsg, uint32_t count)
{
    SpiDevice *spiDevice = NULL;
    uint32_t ticks = 0;
    uint8_t singleCsChange = 0;
    struct SpiMsg *msg = NULL;
    if (spiCntlr == NULL || spiCntlr->priv == NULL) {
        HDF_LOGE("%s: spiCntlr is NULL\r\n", __func__);
        return HDF_ERR_INVALID_PARAM;
    }

    spiDevice = (SpiDevice *)spiCntlr->priv;
    for (size_t i = 0; i < count; i++) {
        msg = &spiMsg[i];
        LL_GPIO_ResetOutputPin(LL_GET_GPIOX(spiDevice->resource.csGroup), LL_GET_HAL_PIN(spiDevice->resource.csPin));

        if ((msg->rbuf == NULL) && (msg->wbuf != NULL)) {
            singleCsChange = msg->wbuf[0];

            if (msg->len == 1) {
                goto CS_DOWN;
            }
            HalSpiSend(spiDevice, msg->wbuf + 1, msg->len - 1);
        }

        if ((msg->rbuf != NULL) && (msg->wbuf == NULL)) {
            singleCsChange = msg->rbuf[0];

            if (msg->len == 1) {
                goto CS_DOWN;
            }
            HalSpiRecv(spiDevice, msg->rbuf + 1, msg->len - 1);
        }

        if ((msg->wbuf != NULL) && (msg->rbuf != NULL)) {
            HalSpiSendRecv(spiDevice, msg->wbuf, msg->len, msg->rbuf, msg->len);
        }

        if (msg->keepCs == 0|| singleCsChange) {
            LL_GPIO_SetOutputPin(LL_GET_GPIOX(spiDevice->resource.csGroup), LL_GET_HAL_PIN(spiDevice->resource.csPin));
        }
        if (msg->delayUs > 0) {
            ticks = (msg->delayUs / PER_MS_IN_SEC);
            osDelay(ticks);
        }
    }
    return HDF_SUCCESS;
CS_DOWN:
    if (msg->keepCs == 0 || singleCsChange) {
        LL_GPIO_SetOutputPin(LL_GET_GPIOX(spiDevice->resource.csGroup), LL_GET_HAL_PIN(spiDevice->resource.csPin));
    }
    return HDF_SUCCESS;
}
